Funcionou e uploaded. Ainda precisa de mudanças...

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,24 @@
     <title>JLeao.com</title>
   </head>
   
-  <body>
+  <body style="
+    box-sizing: border-box;
+    font-family: Amaranth, Serif;
+    font-size: 18pt;
+    margin:0;
+    padding:0;
+
+    *, *::before, *::after {
+      box-sizing: inherit;
+      padding: 0;
+      margin: 0;
+    }
+">
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
+
   </body>
 </html>
 
