--- a/src/teste.html
+++ b/src/teste.html
@@ -13,7 +13,11 @@
     <title>JLeao.com</title>
 </head>
 
-<body style="margin:0; padding:0;">
+<body style="
+    box-sizing: border-box;
+    font-family: Amaranth, Serif;
+    margin:0;
+    padding:0;">
 
 <div style="
     position:fixed;
@@ -24,7 +28,8 @@
     background-color: aqua;
     border:1px solid black;
     text-align: center;
-">HEADER
+    font-size: 2.5em;
+">Header
 </div>
 
 <div style="
